fixed uneven rows on main page

--- a/src/pages/homepage/components/MoviesList.css
+++ b/src/pages/homepage/components/MoviesList.css
@@ -2,4 +2,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  border: 3px solid red;
   background-color: rgb(25, 27, 25);}
+
+  .movie-card.hidden{
+    margin-right: 1.5rem;
+    display: hidden;
+  }
